[package]
name = "cmdwrap"
description = "Command for run shell script"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["cmdwrap"]
repository = "https://github.com/prongbang/cmdwrap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
futures-core = "0.3.28"
futures-util = "0.3.28"
serde = { version = "1.0.175", features = ["derive"] }